--- a/package.json
+++ b/package.json
@@ -24,6 +24,20 @@
   },
   "homepage": "https://github.com/SDI4Apps/spoi#readme",
   "dependencies": {
-    "hslayers-ng": "^0.5.4"
+    "hslayers-ng": ">=0.9.1"
+  },
+  "devDependencies": {
+    "deamdify": "^0.3.0",
+    "angular-jsdoc": "^1.5.0",
+    "browserify": "^16.2.3",
+    "exposify": "^0.5.0",
+    "grunt": "^1.0.3",
+    "grunt-angular-gettext": "^2.3.2",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-uglify-es": "git://github.com/gruntjs/grunt-contrib-uglify.git#harmony",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-exec": "^3.0.0",
+    "grunt-jsbeautifier": "0.2.x",
+    "grunt-jsdoc": "^2.2.1"
   }
 }
