--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/SDI4Apps/spoi#readme",
   "dependencies": {
-    "hslayers-ng": ">=0.9.1"
+    "hslayers-ng": "^0.9.3"
   },
   "devDependencies": {
-    "deamdify": "^0.3.0",
     "angular-jsdoc": "^1.5.0",
     "browserify": "^16.2.3",
+    "deamdify": "^0.3.0",
     "exposify": "^0.5.0",
     "grunt": "^1.0.3",
     "grunt-angular-gettext": "^2.3.2",
