--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "deamdify": "^0.3.0",
+    "eslint": "^7.5.0",
+    "eslint-config-openlayers": "^14.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
     "exposify": "^0.5.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^3.0.1",
