--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "globals": {
     "$": "readonly"
   },
+  "parser": "babel-eslint",
   "rules": {
     "brace-style": "warn",
     "no-console": "warn",
