--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "mini-css-extract-plugin": "^0.11.0",
     "ng-cache-loader": "0.0.26",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^7.0.32",
+    "postcss-prefix-selector": "^1.7.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
