--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-angularjs-annotate": "^0.10.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
+    "dynamic-pub-path-plugin": "0.0.4",
     "eslint": "^7.8.1",
     "eslint-config-openlayers": "^14.0.0",
     "eslint-plugin-import": "^2.22.0",
