--- a/package.json
+++ b/package.json
@@ -1,67 +1,57 @@
 {
-  "name": "spoi",
-  "version": "1.0.0",
-  "description": "Points of interest map",
-  "main": "index.html",
+  "name": "foodie-map",
+  "version": "1.99.0",
+  "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "build": "node node_modules/hslayers-ng/scripts/bootstrap-isolate.js && webpack --config ./webpack.prod.js --progress",
-    "build-dev": "node node_modules/hslayers-ng/scripts/bootstrap-isolate.js && webpack --config ./webpack.dev.js --progress",
-    "start": "http-server ./ -p 8080",
-    "start-dev": "webpack-dev-server --config ./webpack.dev.js --progress --watch"
+    "start": "node_modules/.bin/pm2 --no-daemon start ecosystem.config.js",
+    "start-dev": "ng serve --aot --disable-host-check",
+    "build": "ng build --prod",
+    "build-dev": "ng build --aot"
+  },
+  "dependencies": {
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/localize": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@ngx-translate/http-loader": "^5.0.0",
+    "bootstrap": "^4.5.3",
+    "deepmerge": "^4.2.2",
+    "hslayers-ng": "^3.0.0",
+    "moment": "^2.29.1",
+    "moment-interval": "^0.2.1",
+    "ngx-cookie-service": "^3.1.3",
+    "ol": "^6.5.0",
+    "ol-popup": "^4.0.0",
+    "proj4": "^2.6.3",
+    "rxjs": "^6.6.3",
+    "share-api-polyfill": "^1.0.20",
+    "ts-sync-request": "^1.4.1",
+    "tslib": "^1.10.0",
+    "xml-js": "^1.6.11",
+    "zone.js": "^0.10.3"
+  },
+  "devDependencies": {
+    "@angular-builders/custom-webpack": "~9.2.0",
+    "@angular-devkit/build-angular": "~0.901.13",
+    "@angular-devkit/build-ng-packagr": "~0.901.13",
+    "@angular/cli": "~9.1.13",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angularclass/hmr": "^3.0.0",
+    "@ngx-translate/core": "^12.1.2",
+    "ng-packagr": "^9.1.5",
+    "pm2": "^3.5.2",
+    "typescript": "3.8.3",
+    "webpack": "^4.46.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SDI4Apps/spoi.git"
+    "url": "https://git.lesprojekt.cz/fzadrazil/foodie-map.git"
   },
-  "keywords": [
-    "poi",
-    "spoi",
-    "tourism",
-    "linked data"
-  ],
-  "author": "bosc, ccss",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SDI4Apps/spoi/issues"
-  },
-  "homepage": "https://github.com/SDI4Apps/spoi#readme",
-  "dependencies": {
-    "hslayers-ng": "^1.27.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "angular-jsdoc": "^1.5.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-angularjs-annotate": "^0.10.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.3.0",
-    "dynamic-pub-path-plugin": "0.0.4",
-    "eslint": "^7.21.0",
-    "eslint-config-openlayers": "^14.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "extract-loader": "^5.1.0",
-    "file-loader": "^6.2.0",
-    "grunt": "^1.3.0",
-    "grunt-angular-gettext": "^2.5.3",
-    "grunt-jsdoc": "^2.4.1",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.2",
-    "http-server": "^0.12.3",
-    "mini-css-extract-plugin": "^0.11.3",
-    "ng-cache-loader": "0.0.26",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^7.0.35",
-    "postcss-prefix-selector": "^1.7.2",
-    "style-loader": "^1.3.0",
-    "url-loader": "^4.1.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
-  }
+  "author": "",
+  "license": "ISC"
 }
