--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/compiler-cli": "~9.1.13",
     "@angularclass/hmr": "^3.0.0",
     "@ngx-translate/core": "^12.1.2",
+    "@types/node": "^15.3.1",
     "ng-packagr": "^9.1.5",
     "pm2": "^3.5.2",
     "typescript": "3.8.3",
