--- a/package.json
+++ b/package.json
@@ -38,16 +38,24 @@
     "@angular-builders/custom-webpack": "~9.2.0",
     "@angular-devkit/build-angular": "~0.901.13",
     "@angular-devkit/build-ng-packagr": "~0.901.13",
+    "@angular-eslint/builder": "^12.1.0",
+    "@angular-eslint/eslint-plugin": "^12.1.0",
+    "@angular-eslint/eslint-plugin-template": "^12.1.0",
+    "@angular-eslint/template-parser": "^12.1.0",
     "@angular/cli": "~9.1.13",
     "@angular/compiler-cli": "~9.1.13",
     "@angularclass/hmr": "^3.0.0",
     "@ngx-translate/core": "^12.1.2",
     "@types/node": "^15.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.27.0",
+    "eslint-config-openlayers": "~14.0.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "ng-packagr": "^9.1.5",
     "pm2": "^3.5.2",
-    "typescript": "3.8.3",
-    "webpack": "^4.46.0",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^3.8.3"
   },
   "repository": {
     "type": "git",
