--- a/package.json
+++ b/package.json
@@ -10,53 +10,55 @@
     "build-dev": "ng build --aot"
   },
   "dependencies": {
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/localize": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/localize": "^11.2.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ngx-translate/http-loader": "^5.0.0",
     "bootstrap": "^4.5.3",
+    "dayjs": "^1.10.6",
     "deepmerge": "^4.2.2",
-    "hslayers-ng": "^3.0.0",
-    "moment": "^2.29.1",
-    "moment-interval": "^0.2.1",
-    "ngx-cookie-service": "^3.1.3",
-    "ol": "^6.5.0",
+    "geostyler-openlayers-parser": "^2.3.1",
+    "geostyler-sld-parser": "^2.3.0",
+    "geostyler-style": "^4.0.3",
+    "hslayers-ng": "^5.0.0",
+    "ngx-color": "^6.2.0",
+    "ngx-cookie-service": "^11.0.2",
+    "ol": "~6.5.0",
     "ol-popup": "^4.0.0",
     "proj4": "^2.6.3",
     "rxjs": "^6.6.3",
     "share-api-polyfill": "^1.0.20",
-    "ts-sync-request": "^1.4.1",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "xml-js": "^1.6.11",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "~9.2.0",
-    "@angular-devkit/build-angular": "~0.901.13",
-    "@angular-devkit/build-ng-packagr": "~0.901.13",
+    "@angular-builders/custom-webpack": "^11.1.1",
+    "@angular-devkit/build-angular": "~0.1102.14",
     "@angular-eslint/builder": "^12.1.0",
     "@angular-eslint/eslint-plugin": "^12.1.0",
     "@angular-eslint/eslint-plugin-template": "^12.1.0",
     "@angular-eslint/template-parser": "^12.1.0",
-    "@angular/cli": "~9.1.13",
-    "@angular/compiler-cli": "~9.1.13",
+    "@angular/cli": "~11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
     "@angularclass/hmr": "^3.0.0",
     "@ngx-translate/core": "^12.1.2",
-    "@types/node": "^15.3.1",
+    "@types/node": "^16.4.5",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
     "eslint-config-openlayers": "~14.0.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-tsdoc": "^0.2.14",
-    "ng-packagr": "^9.1.5",
+    "ng-packagr": "^11.0.0",
     "pm2": "^3.5.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.6"
   },
   "repository": {
     "type": "git",
